--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,42 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#f8f8f8
+}
+.book-library{
+	width:500px;
+	height:auto;
+	align-items:center;
+	justify-content:center;
+}
+.book{
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	justify-content:center;
+	 box-shadow: 1px 20px 20px -5px ; 
+	width:40vw;
+	height:auto;
+	padding:10px;
+}
+.white-bar{
+	width:100%;
+	height:20px;
+	background-color:white;
+	margin-bottom:10px;
+}
+.author{
+
+	margin-right:120px;
+	
+}
+.author p{
+	margin-bottom;
+}
+button{
+width:32vw;
+border-radius:5px;
+border:none;
+background-color:#2dcc71;
+color:white;
+	margin-bottom:30px;
+}
